--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      flex-direction: column;
+      flex-direction: row;
       margin-top: 20px;
       width: 100%;
     }
