--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 .page-LikeDeslike{
     display: flex;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     background-color: #f5f5f5;
     flex-direction: column;
 
@@ -21,7 +21,21 @@
       align-items: center;
       justify-content: center;
       flex-direction: row;
+      flex-wrap: wrap;
       margin-top: 20px;
+      max-width: 700px;
       width: 100%;
+      margin-bottom: 30px;
+    }
+
+    footer{
+      background-color: rgb(133, 124, 124);
+      width: 100%;
+      color: white;
+      padding: 15px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 }
